--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -38,9 +38,7 @@ jobs:
         mkdir -p win64
         ./godot --path $GITHUB_WORKSPACE --export "win64" "win64/ProjectTesseract.exe"
 
-    - name: GitHub Pages Deploy
-      uses: maxheld83/ghpages@v0.2.1
-      with:
-        GH_PAT: ${{ secrets.GH_PAT }}
-      env:
-        BUILD_DIR: win64/
+    - uses: actions/upload-artifact@master
+  with:
+    name: my-artifact
+    path: win64
