--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -37,8 +37,14 @@ jobs:
       run: |
         mkdir -p win64
         ./godot --path $GITHUB_WORKSPACE --export "win64" "win64/ProjectTesseract.exe"
+        mkdir -p macOS
+        ./godot --path $GITHUB_WORKSPACE --export "macOS" "macOS/ProjectTesseract.app"
 
     - uses: actions/upload-artifact@master
       with:
-       name: my-artifact
+       name: Windows_64
        path: win64
+    - uses: actions/upload-artifact@master
+      with:
+       name: macOS
+       path: macOS
