--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -48,3 +48,10 @@ jobs:
       with:
         name: macOS
         path: builds
+    - name: Deploy to Pages
+      uses: JamesIves/github-pages-deploy-action@master
+      env:
+        ACCESS_TOKEN: ${{ secrets.GH_PAT }}
+        BRANCH: gh-pages # The branch the action should deploy to.
+        FOLDER: builds # The folder the action should deploy.
+
