--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -48,10 +48,9 @@ jobs:
       with:
         name: macOS
         path: builds
-    - name: Deploy to Pages
-      uses: JamesIves/github-pages-deploy-action@master
-      env:
-        ACCESS_TOKEN: ${{ secrets.GH_PAT }}
-        BRANCH: gh-pages # The branch the action should deploy to.
-        FOLDER: builds # The folder the action should deploy.
+    - name: Release
+        uses: fnkr/github-action-ghr@v1
+        env:
+          GHR_PATH: builds/
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
