--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -50,6 +50,7 @@ jobs:
         path: builds
     - name: Release
       uses: fnkr/github-action-ghr@v1
+      if: startsWith(github.ref, 'refs/tags/')
       env:
         GHR_PATH: builds/
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
