--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -39,18 +39,18 @@ jobs:
     - name: Export win64 build
       run: |
         mkdir -p $GITHUB_WORKSPACE/builds
-        ./godot --path $GITHUB_WORKSPACE --export "$GITHUB_WORKSPACE/builds" "win64/ProjectTesseract.exe"
+        ./godot --path $GITHUB_WORKSPACE --export "builds" "win64/ProjectTesseract.exe"
     - name: Export macOS build
       run: |
-        ./godot --path $GITHUB_WORKSPACE --export "$GITHUB_WORKSPACE/builds" "macOS/ProjectTesseract.app"
+        ./godot --path $GITHUB_WORKSPACE --export "builds" "macOS/ProjectTesseract.app"
     - uses: actions/upload-artifact@master
       with:
         name: Windows_64
-        path: $GITHUB_WORKSPACE/builds
+        path: builds
     - uses: actions/upload-artifact@master
       with:
         name: macOS
-        path: $GITHUB_WORKSPACE/builds
+        path: builds
     - name: Release
       uses: fnkr/github-action-ghr@v1
       if: startsWith(github.ref, 'refs/tags/')
