--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -38,19 +38,21 @@ jobs:
         mv ~/.local/share/godot/templates/templates ~/.local/share/godot/templates/3.1.1.stable
     - name: Export win64 build
       run: |
-        mkdir -p $GITHUB_WORKSPACE/builds
-        ./godot --path $GITHUB_WORKSPACE --export "builds" "win64/ProjectTesseract.exe"
+        mkdir -p builds
+        mkdir -p builds/win64
+        ./godot --path $GITHUB_WORKSPACE --export "win64" "builds/win64/ProjectTesseract.exe"
     - name: Export macOS build
       run: |
-        ./godot --path $GITHUB_WORKSPACE --export "builds" "macOS/ProjectTesseract.app"
+        mkdir -p builds/macOS
+        ./godot --path $GITHUB_WORKSPACE --export "macOS" "builds/macOS/ProjectTesseract.app"
     - uses: actions/upload-artifact@master
       with:
         name: Windows_64
-        path: builds
+        path: builds/win64
     - uses: actions/upload-artifact@master
       with:
         name: macOS
-        path: builds
+        path: builds/macOS
     - name: Release
       uses: fnkr/github-action-ghr@v1
       if: startsWith(github.ref, 'refs/tags/')
