--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -57,6 +57,6 @@ jobs:
       uses: fnkr/github-action-ghr@v1
       if: startsWith(github.ref, 'refs/tags/')
       env:
-        GHR_PATH: $GITHUB_WORKSPACE/builds
+        GHR_PATH: builds
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
