--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -53,10 +53,10 @@ jobs:
       with:
         name: macOS
         path: builds/macOS
-    - name: Release
-      uses: fnkr/github-action-ghr@v1
-      if: startsWith(github.ref, 'refs/tags/')
+    - name: Upload to release
+      uses: JasonEtco/upload-to-release@master
+      with:
+        args: builds/macOS
       env:
-        GHR_PATH: builds
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
