--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -56,7 +56,7 @@ jobs:
     - name: Upload to release
       uses: JasonEtco/upload-to-release@master
       with:
-        args: builds/macOS
+        args: builds/macOS/ProjectTesseract.app
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
