--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -46,7 +46,7 @@ jobs:
     - name: Upload to release
       uses: JasonEtco/upload-to-release@master
       with:
-        args: builds/macOS/ProjectTesseract.app
+        args: builds/macOS/ProjectTesseract.app application/x-compress
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
