--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -25,8 +25,8 @@ custom_template/debug=""
 application/icon=""
 application/file_version=""
 application/product_version=""
-application/company_name=""
-application/product_name=""
+application/company_name="Lunatic Games"
+application/product_name="ProjectTesseract"
 application/file_description=""
 application/copyright=""
 application/trademarks=""
@@ -49,15 +49,40 @@ script_encryption_key=""
 
 custom_package/debug=""
 custom_package/release=""
-application/name=""
+application/name="ProjectTesseract"
 application/info="Made with Godot Engine"
 application/icon=""
 application/identifier=""
 application/signature=""
 application/short_version="1.0"
 application/version="1.0"
-application/copyright=""
-display/high_res=false
+application/copyright="Lunatic Games"
+display/high_res=true
 texture_format/s3tc=true
 texture_format/etc=false
 texture_format/etc2=false
+
+[preset.2]
+
+name="linux/x11"
+platform="Linux/X11"
+runnable=true
+custom_features=""
+export_filter="all_resources"
+include_filter=""
+exclude_filter=""
+export_path=""
+patch_list=PoolStringArray(  )
+script_export_mode=1
+script_encryption_key=""
+
+[preset.2.options]
+
+texture_format/bptc=false
+texture_format/s3tc=true
+texture_format/etc=false
+texture_format/etc2=false
+texture_format/no_bptc_fallbacks=true
+binary_format/64_bits=true
+custom_template/release=""
+custom_template/debug=""
