--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -1,6 +1,6 @@
 [preset.0]
 
-name="win64"
+name="win64-1"
 platform="Windows Desktop"
 runnable=true
 custom_features=""
@@ -33,7 +33,7 @@ application/trademarks=""
 
 [preset.1]
 
-name="macOS"
+name="macOS-1"
 platform="Mac OSX"
 runnable=true
 custom_features=""
@@ -64,7 +64,7 @@ texture_format/etc2=false
 
 [preset.2]
 
-name="linux/x11"
+name="linux/x11-1"
 platform="Linux/X11"
 runnable=true
 custom_features=""
